# jarvis

./: .gitignore  activator.py  cancellation.py  constants.py  insa.onnx  insa.tflite  jarvis.onnx  jarvis.tflite  llm.py  main.py  pyproject.toml  speech_recognizer.py  tts.py  volume_control.py  wakeword_training.ipynb
tools/: browsers.py  miscellaneous.py  open_apps.py  press_key.py
