[project]
name = "jarvis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "groq>=1.0.0",
    "keyboard>=0.13.5",
    "numpy>=2.2.6",
    "openwakeword>=0.6.0",
    "pyaudio>=0.2.14",
    "pyautogui>=0.9.54",
    "pycaw>=20251023",
    "python-dotenv>=1.2.1",
    "speechrecognition>=3.14.5",
]
