[project]
name = "jarvis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "asyncio>=4.0.0",
    "edge-tts>=7.2.7",
    "groq>=1.0.0",
    "keyboard>=0.13.5",
    "numpy>=2.2.6",
    "openwakeword>=0.6.0",
    "pedalboard>=0.9.21",
    "pyaudio>=0.2.14",
    "pyautogui>=0.9.54",
    "pycaw>=20251023",
    "pygame>=2.6.1",
    "python-dotenv>=1.2.1",
    "soundfile>=0.13.1",
    "speechrecognition>=3.14.5",
]
